--- a/settings.json
+++ b/settings.json
@@ -2,13 +2,35 @@
   "options": {
     "music_enabled": ["true", "false"],
     "sfx_enabled": ["true", "false"],
-    "difficulty": ["easy", "medium", "hard"]
+    "difficulty": ["easy", "medium", "hard"],
+    "ships": {
+      "The Goblin": {
+        "original_img": "sprites/playerShip.png",
+        "hit_img": "sprites/playerShipHit.png",
+        "beam_img": "sprites/playerBeam.png"
+      },
+      "Blue Angel": {
+        "original_img": "sprites/playerShip2.png",
+        "hit_img": "sprites/playerShip2Hit.png",
+        "beam_img": "sprites/playerBeam2.png"
+      },
+      "Dark Red": {
+        "original_img": "sprites/playerShip3.png",
+        "hit_img": "sprites/playerShip3Hit.png",
+        "beam_img": "sprites/playerBeam3.png"
+      }
+    }
   },
 
   "player_settings": {
     "music_enabled": "false",
     "sfx_enabled": "false",
-    "difficulty": "easy"
+    "difficulty": "easy",
+    "ship": {
+      "original_img": "sprites/playerShip3.png",
+      "hit_img": "sprites/playerShip3Hit.png",
+      "beam_img": "sprites/playerBeam3.png"
+    }
   }
 
 }
