--- a/settings.json
+++ b/settings.json
@@ -18,6 +18,11 @@
         "original_img": "sprites/playerShip3.png",
         "hit_img": "sprites/playerShip3Hit.png",
         "beam_img": "sprites/playerBeam3.png"
+      },
+      "Wasp Yellow": {
+        "original_img": "sprites/playerShip4.png",
+        "hit_img": "sprites/playerShip4Hit.png",
+        "beam_img": "sprites/playerBeam4.png"
       }
     }
   },
@@ -27,9 +32,9 @@
     "sfx_enabled": "false",
     "difficulty": "easy",
     "ship": {
-      "original_img": "sprites/playerShip3.png",
-      "hit_img": "sprites/playerShip3Hit.png",
-      "beam_img": "sprites/playerBeam3.png"
+      "original_img": "sprites/playerShip4.png",
+      "hit_img": "sprites/playerShip4Hit.png",
+      "beam_img": "sprites/playerBeam4.png"
     }
   }
 
