--- a/settings.json
+++ b/settings.json
@@ -1,41 +1,1 @@
-{
-  "options": {
-    "music_enabled": ["true", "false"],
-    "sfx_enabled": ["true", "false"],
-    "difficulty": ["easy", "medium", "hard"],
-    "ships": {
-      "The Goblin": {
-        "original_img": "sprites/playerShip.png",
-        "hit_img": "sprites/playerShipHit.png",
-        "beam_img": "sprites/playerBeam.png"
-      },
-      "Blue Angel": {
-        "original_img": "sprites/playerShip2.png",
-        "hit_img": "sprites/playerShip2Hit.png",
-        "beam_img": "sprites/playerBeam2.png"
-      },
-      "Dark Red": {
-        "original_img": "sprites/playerShip3.png",
-        "hit_img": "sprites/playerShip3Hit.png",
-        "beam_img": "sprites/playerBeam3.png"
-      },
-      "Wasp Yellow": {
-        "original_img": "sprites/playerShip4.png",
-        "hit_img": "sprites/playerShip4Hit.png",
-        "beam_img": "sprites/playerBeam4.png"
-      }
-    }
-  },
-
-  "player_settings": {
-    "music_enabled": "false",
-    "sfx_enabled": "false",
-    "difficulty": "easy",
-    "ship": {
-      "original_img": "sprites/playerShip4.png",
-      "hit_img": "sprites/playerShip4Hit.png",
-      "beam_img": "sprites/playerBeam4.png"
-    }
-  }
-
-}
+{"options": {"music": ["ON", "OFF"], "sfx": ["ON", "OFF"], "difficulty": ["easy", "medium", "hard"], "ships": {"goblin": {"original_img": "sprites/playerShip.png", "hit_img": "sprites/playerShipHit.png", "beam_img": "sprites/playerBeam.png"}, "blue_angel": {"original_img": "sprites/playerShip2.png", "hit_img": "sprites/playerShip2Hit.png", "beam_img": "sprites/playerBeam2.png"}, "dark_red": {"original_img": "sprites/playerShip3.png", "hit_img": "sprites/playerShip3Hit.png", "beam_img": "sprites/playerBeam3.png"}, "yellow_stinger": {"original_img": "sprites/playerShip4.png", "hit_img": "sprites/playerShip4Hit.png", "beam_img": "sprites/playerBeam4.png"}}}, "player_settings": {"music": "OFF", "sfx": "OFF", "difficulty": "easy", "ship": {"original_img": "sprites/playerShip2.png", "hit_img": "sprites/playerShip2Hit.png", "beam_img": "sprites/playerBeam2.png"}}}
