updated game text and indicator positions

--- a/settings.json
+++ b/settings.json
@@ -45,7 +45,7 @@
         }
     },
     "player_settings": {
-        "music": "ON",
+        "music": "OFF",
         "sfx": "OFF",
         "difficulty": "EASY",
         "ship": {
